# qp_flexzboost

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: add-issue-to-project-tracker.yml  build-documentation.yml  linting.yml  smoke-test.yml  testing-and-coverage.yml
docs/: Makefile  conf.py  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: cdf_demonstration.ipynb  demo.ipynb  minimal_notebook.ipynb
docs/source/: performance_comparison.rst
notebooks/: cdf_demonstration.ipynb  demo.ipynb  sam_test.ipynb
src/qp_flexzboost/: __init__.py  flexzboost_pdf.py  util.py
tests/qp_flexzboost_tests/: helpers.py  test_flexzboost_ensemble.py  test_flexzboost_pdf.py
