[project]
name = "qp_flexzboost"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" },
    { name = "Drew Oldag", email = "awoldag@uw.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]
dependencies = [
    "deprecated",
    "flexcode",
    "ipykernel", # Support for Jupyter notebooks
    "numpy >= 1.24",
    "qp-prob>=0.7.1", # The primary dependency
    "scipy >= 1.9.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "sphinx==6.1.3", # Used to automatically generate documentation
    "sphinx_rtd_theme==1.2.0", # Used to render documentation
    "sphinx-autoapi==2.0.1", # Used to automatically generate api documentation
    "pylint", # Used for static linting of files
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to itegrate Python notebooks into Sphinx documentation
    "ipython", # Also used in building notebooks into Sphinx
    "matplotlib", # Used in sample notebook intro_notebook.ipynb
    "numpy", # Used in sample notebook intro_notebook.ipynb
]

[build-system]
requires = [
    "setuptools>=45", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/qp_flexzboost/_version.py"



[tool.pylint.'MESSAGES CONTROL']
disable = """
    missing-module-docstring,
    protected-access,
    arguments-differ,
    unused-argument
"""
ignore-patterns = "^_.*" # Ignore files that start with an underscore, i.e. _version.py
