[project]
name = "qp_flexzboost"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "LINCC Frameworks", email = "lincc-frameworks-team@lists.lsst.org" },
    { name = "Drew Oldag", email = "awoldag@uw.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = ["version"]
dependencies = [
    "flexcode",
    "numpy >= 1.24",
    "qp-prob >=1.0.0", # The primary dependency
    "scipy >= 1.9.0",
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "ipykernel", # Support for Jupyter notebooks
    "pytest", # Used for unit testing
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "qp-prob[full] >=1.0.0", # The primary dependency
    "sphinx==6.1.3", # Used to automatically generate documentation
    "sphinx-rtd-theme==1.2.0", # Used to render documentation
    "sphinx-autoapi==2.0.1", # Used to automatically generate api documentation
    "black", # Used for static linting of files
    # if you add dependencies here while experimenting in a notebook and you
    # want that notebook to render in your documentation, please add the
    # dependencies to ./docs/requirements.txt as well.
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "ipython", # Also used in building notebooks into Sphinx
    "matplotlib",
    "jupyter",
    "jupytext",
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/qp_flexzboost/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
